@@ -1,6 +1,7 @@
 = 1.1.22 =
 * Avada converts checkbox to select dropdown don't saves empty value - CHANGED
 * Check preview for Kallyas theme Zion builder editor - ADDED
+* PHP notice of argument must be of type array, null given - FIXED
 
 = 1.1.21 =
 * New line character in translation results in JS error - FIXED
